--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+.emacs.d/.lsp-session-*
+.emacs.d/network-security.data
+.emacs.d/projectile-bookmarks.eld
+.emacs.d/smex-items
 .emacs.d/auto-save-list/
 .emacs.d/elpa/
-.emacs.d/network-security.data
+.emacs.d/gotools/
+.emacs.d/ido.last
+.emacs.d/transient/
