--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .emacs.d/.cache
 .emacs.d/.dap-breakpoints
+.emacs.d/eln-cache/
 .emacs.d/.extension/
 .emacs.d/.lsp-session-*
 .emacs.d/.org-id-locations
@@ -7,6 +8,7 @@
 .emacs.d/eshell/
 .emacs.d/network-security.data
 .emacs.d/projectile-bookmarks.eld
+.emacs.d/session.*
 .emacs.d/smex-items
 .emacs.d/auto-save-list/
 .emacs.d/elpa/
